[gd_scene load_steps=6 format=3 uid="uid://bc2otysb0f2o7"]

[ext_resource type="PackedScene" uid="uid://dh3tlmtkluu1i" path="res://special_levels/SpecialLevelBase.tscn" id="1_5ts0p"]
[ext_resource type="Script" path="res://HiyoriLevel.gd" id="2_ewfgo"]
[ext_resource type="PackedScene" uid="uid://cjbpq0idokwho" path="res://npcs/npc_hiyori.tscn" id="3_seshw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etgt4"]
size = Vector2(49.6, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ku54s"]
size = Vector2(59.8, 61.6)

[node name="HiyoriLevel" instance=ExtResource("1_5ts0p")]
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 720898, 1, 196609, 720898, 1, 262145, 720898, 1, 327681, 720898, 1, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 1048577, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 1245185, 0, 0, 1310721, 0, 0, 2, 0, 0, 65538, 720898, 1, 131074, 720898, 1, 196610, 720898, 1, 262146, 720898, 1, 327682, 720898, 1, 393218, 720898, 1, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, 851970, 0, 0, 917506, 0, 0, 983042, 0, 0, 1048578, 0, 0, 1114114, 0, 0, 1179650, 0, 0, 1245186, 0, 0, 1310722, 0, 0, 3, 0, 0, 65539, 720898, 1, 131075, 720898, 1, 196611, 720898, 1, 262147, 720898, 1, 327683, 720898, 1, 393219, 720898, 1, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 851971, 0, 0, 917507, 0, 0, 983043, 0, 0, 1048579, 0, 0, 1114115, 0, 0, 1179651, 0, 0, 1245187, 0, 0, 1310723, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 720898, 1, 196612, 720898, 1, 262148, 720898, 1, 327684, 720898, 1, 393220, 720898, 1, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 0, 0, 851972, 0, 0, 917508, 0, 0, 983044, 0, 0, 1048580, 0, 0, 1114116, 0, 0, 1179652, 0, 0, 1245188, 0, 0, 1310724, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 720898, 1, 196613, 720898, 1, 262149, 720898, 1, 327685, 720898, 1, 393221, 720898, 1, 458757, 720898, 1, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 786437, 0, 0, 851973, 0, 0, 917509, 0, 0, 983045, 0, 0, 1048581, 0, 0, 1114117, 0, 0, 1179653, 0, 0, 1245189, 0, 0, 1310725, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 720898, 1, 196614, 720898, 1, 262150, 720898, 1, 327686, 720898, 1, 393222, 720898, 1, 458758, 720898, 1, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 0, 0, 786438, 0, 0, 851974, 0, 0, 917510, 0, 0, 983046, 0, 0, 1048582, 0, 0, 1114118, 0, 0, 1179654, 0, 0, 1245190, 0, 0, 1310726, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 720898, 1, 262151, 720898, 1, 327687, 720898, 1, 393223, 720898, 1, 458759, 720898, 1, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0, 917511, 0, 0, 983047, 0, 0, 1048583, 0, 0, 1114119, 0, 0, 1179655, 0, 0, 1245191, 0, 0, 1310727, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 720898, 1, 327688, 720898, 1, 393224, 720898, 1, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 786440, 0, 0, 851976, 0, 0, 917512, 0, 0, 983048, 0, 0, 1048584, 0, 0, 1114120, 0, 0, 1179656, 0, 0, 1245192, 0, 0, 1310728, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 720898, 1, 327689, 720898, 1, 393225, 720898, 1, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 786441, 0, 0, 851977, 0, 0, 917513, 0, 0, 983049, 0, 0, 1048585, 0, 0, 1114121, 0, 0, 1179657, 0, 0, 1245193, 0, 0, 1310729, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 720898, 1, 327690, 720898, 1, 393226, 720898, 1, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0, 851978, 0, 0, 917514, 0, 0, 983050, 0, 0, 1048586, 0, 0, 1114122, 0, 0, 1179658, 0, 0, 1245194, 0, 0, 1310730, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 720898, 1, 327691, 720898, 1, 393227, 720898, 1, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 786443, 0, 0, 851979, 0, 0, 917515, 0, 0, 983051, 0, 0, 1048587, 0, 0, 1114123, 0, 0, 1179659, 0, 0, 1245195, 0, 0, 1310731, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 720898, 1, 327692, 720898, 1, 393228, 720898, 1, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 786444, 0, 0, 851980, 0, 0, 917516, 0, 0, 983052, 0, 0, 1048588, 0, 0, 1114124, 0, 0, 1179660, 0, 0, 1245196, 0, 0, 1310732, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 720898, 1, 327693, 720898, 1, 393229, 720898, 1, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 786445, 0, 0, 851981, 0, 0, 917517, 0, 0, 983053, 0, 0, 1048589, 0, 0, 1114125, 0, 0, 1179661, 0, 0, 1245197, 0, 0, 1310733, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 720898, 1, 327694, 720898, 1, 393230, 720898, 1, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 786446, 720898, 1, 851982, 720898, 1, 917518, 720898, 1, 983054, 720898, 1, 1048590, 720898, 1, 1114126, 0, 0, 1179662, 0, 0, 1245198, 0, 0, 1310734, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 720898, 1, 327695, 720898, 1, 393231, 720898, 1, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 720898, 1, 786447, 720898, 1, 851983, 720898, 1, 917519, 720898, 1, 983055, 720898, 1, 1048591, 720898, 1, 1114127, 720898, 1, 1179663, 0, 0, 1245199, 0, 0, 1310735, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 720898, 1, 327696, 720898, 1, 393232, 720898, 1, 458768, 720898, 1, 524304, 720898, 1, 589840, 720898, 1, 655376, 720898, 1, 720912, 720898, 1, 786448, 720898, 1, 851984, 720898, 1, 917520, 720898, 1, 983056, 720898, 1, 1048592, 720898, 1, 1114128, 720898, 1, 1179664, 0, 0, 1245200, 0, 0, 1310736, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 720898, 1, 327697, 720898, 1, 393233, 720898, 1, 458769, 720898, 1, 524305, 720898, 1, 589841, 720898, 1, 655377, 720898, 1, 720913, 720898, 1, 786449, 720898, 1, 851985, 720898, 1, 917521, 720898, 1, 983057, 720898, 1, 1048593, 720898, 1, 1114129, 720898, 1, 1179665, 0, 0, 1245201, 0, 0, 1310737, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 720898, 1, 327698, 720898, 1, 393234, 720898, 1, 458770, 720898, 1, 524306, 720898, 1, 589842, 720898, 1, 655378, 720898, 1, 720914, 720898, 1, 786450, 720898, 1, 851986, 720898, 1, 917522, 720898, 1, 983058, 720898, 1, 1048594, 720898, 1, 1114130, 720898, 1, 1179666, 720898, 1, 1245202, 0, 0, 1310738, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 720898, 1, 393235, 720898, 1, 458771, 720898, 1, 524307, 720898, 1, 589843, 720898, 1, 655379, 720898, 1, 720915, 720898, 1, 786451, 720898, 1, 851987, 720898, 1, 917523, 720898, 1, 983059, 720898, 1, 1048595, 720898, 1, 1114131, 720898, 1, 1179667, 720898, 1, 1245203, 720898, 1, 1310739, 0, 0, 20, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 393236, 720898, 1, 458772, 720898, 1, 524308, 720898, 1, 589844, 720898, 1, 655380, 720898, 1, 720916, 720898, 1, 786452, 720898, 1, 851988, 720898, 1, 917524, 720898, 1, 983060, 720898, 1, 1048596, 720898, 1, 1114132, 0, 0, 1179668, 0, 0, 1245204, 720898, 1, 1310740, 0, 0, 21, 0, 0, 65557, 0, 0, 131093, 0, 0, 196629, 0, 0, 262165, 0, 0, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 0, 0, 589845, 0, 0, 655381, 0, 0, 720917, 0, 0, 786453, 0, 0, 851989, 0, 0, 917525, 0, 0, 983061, 720898, 1, 1114133, 0, 0, 1179669, 0, 0, 1245205, 720898, 1, 1310741, 0, 0, 22, 0, 0, 65558, 0, 0, 131094, 0, 0, 196630, 0, 0, 262166, 0, 0, 327702, 0, 0, 393238, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 0, 0, 655382, 0, 0, 720918, 0, 0, 786454, 0, 0, 851990, 0, 0, 917526, 0, 0, 983062, 720898, 1, 1048598, 720898, 1, 1114134, 720898, 1, 1179670, 720898, 1, 1245206, 720898, 1, 1310742, 0, 0, 23, 0, 0, 65559, 0, 0, 131095, 0, 0, 196631, 0, 0, 262167, 0, 0, 327703, 0, 0, 393239, 0, 0, 458775, 0, 0, 524311, 0, 0, 589847, 0, 0, 655383, 0, 0, 720919, 0, 0, 786455, 0, 0, 851991, 0, 0, 917527, 0, 0, 983063, 0, 0, 1048599, 0, 0, 1114135, 720898, 1, 1179671, 720898, 1, 1245207, 720898, 1, 1310743, 0, 0, 24, 0, 0, 65560, 0, 0, 131096, 720898, 7, 196632, 720898, 7, 262168, 720898, 7, 327704, 720898, 7, 393240, 0, 0, 458776, 0, 0, 524312, 0, 0, 589848, 0, 0, 655384, 0, 0, 720920, 0, 0, 786456, 0, 0, 851992, 0, 0, 917528, 0, 0, 983064, 0, 0, 1048600, 0, 0, 1114136, 720898, 1, 1179672, 720898, 1, 1245208, 720898, 1, 1310744, 0, 0, 25, 0, 0, 65561, 0, 0, 131097, 720898, 7, 196633, 720898, 7, 262169, 720898, 7, 327705, 720898, 7, 393241, 0, 0, 458777, 0, 0, 524313, 0, 0, 589849, 0, 0, 655385, 0, 0, 720921, 0, 0, 786457, 0, 0, 851993, 0, 0, 917529, 0, 0, 983065, 0, 0, 1048601, 0, 0, 1114137, 720898, 1, 1179673, 720898, 1, 1245209, 720898, 1, 1310745, 0, 0, 26, 0, 0, 65562, 720898, 7, 131098, 720898, 7, 196634, 720898, 7, 262170, 720898, 7, 327706, 720898, 7, 393242, 720898, 7, 458778, 720898, 8, 524314, 0, 0, 589850, 0, 0, 655386, 0, 0, 720922, 0, 0, 786458, 0, 0, 851994, 0, 0, 917530, 720898, 1, 983066, 720898, 1, 1048602, 720898, 1, 1114138, 720898, 1, 1179674, 720898, 1, 1245210, 0, 0, 1310746, 0, 0, 27, 0, 0, 65563, 720898, 7, 131099, 720898, 7, 196635, 524290, 7, 262171, 524290, 8, 327707, 524290, 9, 393243, 720898, 7, 458779, 720898, 8, 524315, 720898, 1, 589851, 720898, 8, 655387, 720898, 1, 720923, 720898, 1, 786459, 720898, 1, 851995, 720898, 1, 917531, 720898, 1, 983067, 720898, 1, 1048603, 720898, 1, 1114139, 720898, 1, 1179675, 720898, 1, 1245211, 0, 0, 1310747, 0, 0, 28, 0, 0, 65564, 720898, 7, 131100, 720898, 7, 196636, 589826, 7, 262172, 589826, 8, 327708, 589826, 9, 393244, 720898, 7, 458780, 720898, 1, 524316, 720898, 8, 589852, 720898, 1, 655388, 720898, 1, 720924, 720898, 8, 786460, 720898, 1, 851996, 720898, 1, 917532, 720898, 1, 983068, 720898, 1, 1048604, 0, 0, 1114140, 0, 0, 1179676, 0, 0, 1245212, 0, 0, 1310748, 0, 0, 29, 0, 0, 65565, 720898, 7, 131101, 720898, 7, 196637, 589826, 7, 262173, 589826, 8, 327709, 589826, 9, 393245, 720898, 7, 458781, 0, 0, 524317, 0, 0, 589853, 0, 0, 655389, 0, 0, 720925, 0, 0, 786461, 0, 0, 851997, 0, 0, 917533, 0, 0, 983069, 0, 0, 1048605, 0, 0, 1114141, 0, 0, 1179677, 0, 0, 1245213, 0, 0, 1310749, 0, 0, 30, 0, 0, 65566, 0, 0, 131102, 720898, 7, 196638, 655362, 7, 262174, 655362, 8, 327710, 655362, 9, 393246, 720898, 7, 458782, 0, 0, 524318, 0, 0, 589854, 0, 0, 655390, 0, 0, 720926, 0, 0, 786462, 0, 0, 851998, 0, 0, 917534, 0, 0, 983070, 0, 0, 1048606, 0, 0, 1114142, 0, 0, 1179678, 0, 0, 1245214, 0, 0, 1310750, 0, 0, 31, 0, 0, 65567, 0, 0, 131103, 720898, 7, 196639, 720898, 7, 262175, 720898, 7, 327711, 720898, 7, 393247, 720898, 7, 458783, 0, 0, 524319, 0, 0, 589855, 0, 0, 655391, 0, 0, 720927, 0, 0, 786463, 0, 0, 851999, 0, 0, 917535, 0, 0, 983071, 0, 0, 1048607, 0, 0, 1114143, 0, 0, 1179679, 0, 0, 1245215, 0, 0, 1310751, 0, 0, 32, 0, 0, 65568, 0, 0, 131104, 720898, 7, 196640, 720898, 7, 262176, 720898, 7, 327712, 720898, 7, 393248, 0, 0, 458784, 0, 0, 524320, 0, 0, 589856, 0, 0, 655392, 0, 0, 720928, 0, 0, 786464, 0, 0, 852000, 0, 0, 917536, 0, 0, 983072, 0, 0, 1048608, 0, 0, 1114144, 0, 0, 1179680, 0, 0, 1245216, 0, 0, 1310752, 0, 0, 33, 0, 0, 65569, 0, 0, 131105, 0, 0, 196641, 0, 0, 262177, 0, 0, 327713, 0, 0, 393249, 0, 0, 458785, 0, 0, 524321, 0, 0, 589857, 0, 0, 655393, 0, 0, 720929, 0, 0, 786465, 0, 0, 852001, 0, 0, 917537, 0, 0, 983073, 0, 0, 1048609, 0, 0, 1114145, 0, 0, 1179681, 0, 0, 1245217, 0, 0, 1310753, 0, 0, 1048597, 0, 0)
layer_1/name = "foreground"
layer_1/tile_data = PackedInt32Array(196636, 4, 0, 262172, 4, 1, 196637, 65540, 0, 262173, 65540, 1, 131098, 5, 0, 196634, 5, 1, 131099, 65541, 0, 196635, 65541, 1, 65564, 5, 0, 131100, 5, 1, 65565, 65541, 0, 131101, 65541, 1, 196639, 5, 0, 262175, 5, 1, 196640, 65541, 0, 262176, 65541, 1, 327710, 5, 0, 393246, 5, 1, 327711, 65541, 0, 393247, 65541, 1, 262168, 5, 0, 327704, 5, 1, 262169, 65541, 0, 327705, 65541, 1, 131096, 5, 0, 196632, 5, 1, 131097, 65541, 0, 196633, 65541, 1, 327707, 5, 0, 393243, 5, 1, 327708, 65541, 0, 393244, 65541, 1, 720914, 5, 0, 786450, 5, 1, 720915, 65541, 0, 786451, 65541, 1, 917519, 5, 0, 983055, 5, 1, 917520, 65541, 0, 983056, 65541, 1, 262159, 5, 0, 327695, 5, 1, 262160, 65541, 0, 327696, 65541, 1, 131075, 5, 0, 196611, 5, 1, 131076, 65541, 0, 196612, 65541, 1, 262148, 5, 0, 327684, 5, 1, 262149, 65541, 0, 327685, 65541, 1, 262146, 5, 0, 327682, 5, 1, 262147, 65541, 0, 327683, 65541, 1, 983058, 5, 0, 1048594, 5, 1, 983059, 65541, 0, 1048595, 65541, 1, 786459, 5, 0, 851995, 5, 1, 786460, 65541, 0, 851996, 65541, 1, 589852, 1, 1, 524307, 1, 1, 786448, 1, 1, 917523, 1, 1, 327690, 1, 1)
script = ExtResource("2_ewfgo")

[node name="PlayerSpawnpoint" parent="." index="0"]
position = Vector2(62.6, 66)
metadata/_edit_group_ = true

[node name="NPCHiyori" parent="." index="1" instance=ExtResource("3_seshw")]
position = Vector2(386.2, 293.4)

[node name="GraveArea" type="Area2D" parent="." index="2"]
position = Vector2(0, -4.76837e-07)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GraveArea" index="0"]
position = Vector2(464.2, 66)
shape = SubResource("RectangleShape2D_etgt4")

[node name="Label" type="Label" parent="GraveArea" index="1"]
visible = false
offset_left = 432.0
offset_top = 34.2
offset_right = 502.0
offset_bottom = 57.2
text = "[Z] to RIP"

[node name="HiyoriArea" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HiyoriArea" index="0"]
position = Vector2(388.3, 293.4)
shape = SubResource("RectangleShape2D_ku54s")

[connection signal="body_entered" from="GraveArea" to="." method="_on_grave_area_body_entered"]
[connection signal="body_exited" from="GraveArea" to="." method="_on_grave_area_body_exited"]
[connection signal="body_entered" from="HiyoriArea" to="." method="_on_hiyori_area_body_entered"]
